# Ebook-Access-Cpp

./: .gitignore  CMakeLists.txt  EbookAccess.pro  README.md  addbookdialog.cpp  addbookdialog.h  addbookdialog.ui  addbooksdialog.cpp  addbooksdialog.h  addbooksdialog.ui  bookdetailswindow.cpp  bookdetailswindow.h  bookdetailswindow.ui  bulkdetailsdialog.cpp  bulkdetailsdialog.h  bulkdetailsdialog.ui  cleanebooksdialog.cpp  cleanebooksdialog.h  cleanebooksdialog.ui  common.cpp  common.h  completer.qrc  extselectiondialog.cpp  extselectiondialog.h  extselectiondialog.ui  images.qrc  insertlinkdialog.cpp  insertlinkdialog.h  insertlinkdialog.ui  inserttabledialog.cpp  inserttabledialog.ui  linkcollectiondialog.cpp  linkcollectiondialog.ui  linkmanagerwindow.cpp  linkmanagerwindow.h  linkmanagerwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+15 more)
docs/: README.md
include/: addbookdialog.h  addbooksdialog.h  bookdetailswidget.h  bookdetailswindow.h  bookmetadatawindow.h  booksearchwidget.h  bulkdetailsdialog.h  cleanbooksdialog.h  cleanebooksdialog.h  colorpickerwidget.h  common.h  dataviewerwindow.h  extselectiondialog.h  findhighlighter.h  getnamedialog.h  insertlinkdialog.h  inserttabledialog.h  linkcollectiondialog.h  linkmanagerwindow.h  mainwindow.h  queries.h  quotedialog.h  ratingcombobox.h  searchnamedialog.h  settingswindow.h  statuscombobox.h  summarywindow.h  texteditor.h  yesnodialog.h
include/dialogs/: addbookdialog.h  (+9 more)
resources/: images.qrc  quotes.qrc  sql.qrc  style.qrc
src/: addbookdialog.cpp  addbooksdialog.cpp  bookdetailswidget.cpp  bookdetailswindow.cpp  bookmetadatawindow.cpp  booksearchwidget.cpp  bulkdetailsdialog.cpp  cleanbooksdialog.cpp  cleanebooksdialog.cpp  colorpickerwidget.cpp  common.cpp  dataviewerwindow.cpp  extselectiondialog.cpp  findhighlighter.cpp  getnamedialog.cpp  insertlinkdialog.cpp  inserttabledialog.cpp  linkcollectiondialog.cpp  linkmanagerwindow.cpp  main.cpp  mainwindow.cpp  queries.cpp  quotedialog.cpp  quotedialog.h  quotedialog.ui  ratingcombobox.cpp  searchnamedialog.cpp  settingswindow.cpp  statuscombobox.cpp  summarywindow.cpp  texteditor.cpp  yesnodialog.cpp
ui/: addbookdialog.ui  addbooksdialog.ui  bookdetailswindow.ui  bulkdetailsdialog.ui  cleanebooksdialog.ui  dataviewerwindow.ui  extselectiondialog.ui  getnamedialog.ui  insertlinkdialog.ui  inserttabledialog.ui  linkmanagerwindow.ui  mainwindow.ui  quotedialog.ui  settingswindow.ui  summarywindow.ui  yesnodialog.ui
(+38 files in other folders)
